--- a/src/components/shared/inputControl/inputControl.css
+++ b/src/components/shared/inputControl/inputControl.css
@@ -1,3 +1,10 @@
-.container{
-    
+.input{
+    border-radius: 10px;
+}
+
+.input::placeholder{
+    color: gray;
+    font-size: 12px;
+    text-align: center;
+    font-weight: bolder;
 }
