--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -2,15 +2,37 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
+    align-items: center;
 }
 
 .login-form {
     padding: 20px;
     border-radius: 20px;
     background-color: var(--primary-color);
+    box-shadow: 2px 10px 15px 1px gray;
 }
 
 .form-group {
     margin-bottom: 20px
+}
+
+.create-font{
+    font-size: 10px;
+    color: white;
+    font-weight: bolder;
+    
+}
+
+.image{
+    width: 120px;
+    height: auto;
+}
+
+.image-container{
+    padding-bottom: 20px;
+}
+
+
+.btn-style{
+    box-shadow: 2px 2px 5px 1px black;
 }
