--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -1,4 +1,5 @@
 .container {
+    margin-top: 600px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,7 +9,7 @@
 .login-form {
     padding: 20px;
     border-radius: 20px;
-    background-color: var(--primary-color);
+    background-color: red;
     box-shadow: 2px 10px 15px 1px gray;
 }
 
