--- a/src/components/task/task.css
+++ b/src/components/task/task.css
@@ -1,13 +1,23 @@
-.task-list-content{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 15px;
-}
 
 .container-task{
+    display: flex;
+    flex-wrap: wrap;
     border-radius: 20px;
+    justify-content: center;
     margin-top:350px;
     box-shadow: 2px 10px 15px 1px black;
-    height: 300px;
+    
 }
+
+.task-list-content{
+    width: 100%;
+    margin-top: 25px;
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    overflow-y: auto;
+    
+}
+
+
+
