--- a/src/components/task/homework/homework.css
+++ b/src/components/task/homework/homework.css
@@ -11,13 +11,20 @@
 
 .task-text{
     display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
     font-size: 20px;
-    align-items: center;
+    align-items: start;
+    justify-content: center;
     padding: 10px;
     color: white;
     font-weight: bolder;
+}
+
+.text-date{
+    font-size: 10px;
+    color: white;
 }
 
 .task-icon{
@@ -32,3 +39,7 @@
    background-color: green;
    text-decoration: line-through;
 }
+
+.task-container.date-completed{
+    background-color: green;
+ }
