--- a/src/components/image/image.css
+++ b/src/components/image/image.css
@@ -2,19 +2,22 @@
     display: flex;
     flex-wrap: wrap;
     border-radius: 20px;
-    justify-content: center;
     margin-top: 350px;
     box-shadow: 2px 10px 15px 1px black;
+    height: 300px;
+    overflow-y: auto;
+    
 }
 
 .container-image {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .image-component {
-    width: 20%;
+    width: 100px;
     height: auto;
     border: 1px solid #ccc;
     border-radius: 4px;
