--- a/src/components/image/image.css
+++ b/src/components/image/image.css
@@ -18,7 +18,7 @@
 
 .image-component {
     width: 100px;
-    height: auto;
+    height: 100px;
     border: 1px solid #ccc;
     border-radius: 4px;
     margin: 10px;
