--- a/src/components/image/image.css
+++ b/src/components/image/image.css
@@ -29,3 +29,10 @@
     height: 15%;
     box-shadow: 2px 2px 5px 1px gray;
 }
+.loading-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
