--- a/src/components/image/detail-image/detail-image.css
+++ b/src/components/image/detail-image/detail-image.css
@@ -9,8 +9,8 @@
 }
 
 detail-image-component{
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     border: 1px solid #ccc;
     border-radius: 4px;
     margin: 10px;
