--- a/src/components/image/detail-image/detail-image.css
+++ b/src/components/image/detail-image/detail-image.css
@@ -1,6 +1,8 @@
 .container-detail{
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     border-radius: 20px;
     margin-top: 350px;
     box-shadow: 2px 10px 15px 1px black;
