--- a/src/components/image/image.css
+++ b/src/components/image/image.css
@@ -4,7 +4,8 @@
     border-radius: 20px;
     margin-top: 350px;
     box-shadow: 2px 10px 15px 1px black;
-    height: 200px;
+    width: 100%;
+    height: 50%;
     overflow-y: auto;
     
 }
