--- a/src/components/image/detail-image/detail-image.css
+++ b/src/components/image/detail-image/detail-image.css
@@ -6,7 +6,8 @@
     border-radius: 20px;
     margin-top: 350px;
     box-shadow: 2px 10px 15px 1px black;
-    height: 200px;
+    width: 100%;
+    height: auto;
     overflow-y: auto;
 }
 
