--- a/src/components/image/detail-image/detail-image.css
+++ b/src/components/image/detail-image/detail-image.css
@@ -7,14 +7,23 @@
     margin-top: 350px;
     box-shadow: 2px 10px 15px 1px black;
     width: 100%;
-    height: auto;
+    height: 300px;
     overflow-y: auto;
 }
 
-detail-image-component{
+.detail-image-component{
     width: 100%;
     height: 100%;
     border: 1px solid #ccc;
     border-radius: 4px;
     margin: 10px;
+}
+
+.btn-detail{
+    display: flex;
+}
+
+.btn-button{
+    width: 100%;
+    height: auto;
 }
