--- a/src/components/image/image.css
+++ b/src/components/image/image.css
@@ -15,6 +15,8 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    height: 300px;
+    overflow-y: auto;
 }
 
 .btn-style-image{
