--- a/src/components/task/homework/homework.css
+++ b/src/components/task/homework/homework.css
@@ -15,7 +15,7 @@
     width: 100%;
     height: 100%;
     font-size: 20px;
-    align-items: start;
+    align-items: flex-start;
     justify-content: center;
     padding: 10px;
     color: white;
